static/css/styles.scss
/* ... */
.lab-logos {
    text-align: center;
    img {
        vertical-align: middle;
        max-width: 100%;
        max-height: 80px;
        margin-bottom: 20px;
        &.als {
            max-height: 80px;
        }
        &.biochem {
            max-height: 80px;
        }
        &.esc {
            max-height: 70px;
            margin-bottom: 30px;
        }
        &.pace {
            max-height: 80px;
        }
        &.rti {
            max-height: 60px;
            margin-bottom: 40px;
        }
        &.sos {
            max-height: 80px;
        }
    }
}
.reports-images {
    img {
        vertical-align: middle;
        max-width: 100%;
    }
}
.index {
    background: #FAFBFD;
    .jumbotron {
        min-height: 400px;
        position: relative;
        z-index: 1;
        h1 {
            margin-top: 80px;
        }
        &:after {
          content: "";
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          opacity: .4;
          z-index: -1;
          background: url('/static/img/splash2.jpg');
          background-size: cover;
          background-position: bottom center;

        }
    }
}
.standalone-form {
    /* Rectangle 4: */
    h2 {
        /* Dashboard: */
        font-family: GothamHTF;
        font-size: 24px;
        color: #575C61;
        letter-spacing: 0.4px;
        line-height: 24px;
        margin-bottom: 50px;
    }
    background: #FFFFFF;
    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.10);
    border-radius: 3px;
    padding: 30px;
    margin-top: 200px;
}


#remember-container label {
    position: relative;

    #remember {
        margin-left: 0;
        left: 0;
    }
}

.security {
    min-height: 100%;
    h1 {
        margin: 0;
        padding: 0 0 20px;
        font-size: 25px;
    }
    .checkbox {
        input[type=checkbox] {
            margin-top: 3px;
        }
        display: inline;
    }
    .logo-group {
        width: 100%;
        text-align: center;
        margin-top: 50px;
        a {
            display: block;
            margin: 0 auto;
        }
        img {
            max-width: 100px;
        }
    }
    .login-form {
        padding: 20px;
        border-radius: 5px;
        border-width: 1px 1px 3px 1px;
        border-color: #DEDEDE;
        border-style: solid;
        margin-top: 40px;
    }
}

.theme {
    body {
      padding-top: 70px;
      padding-bottom: 30px;
    }

    .theme-dropdown .dropdown-menu {
      position: static;
      display: block;
      margin-bottom: 20px;
    }

    .theme-showcase > p > .btn {
      margin: 5px 0;
    }

    .theme-showcase .navbar .container {
      width: auto;
    }

}

.panel {
    background: #EEE;
    width: 100%;
    padding: 40px 0;

}

section {
    padding: 30px 0;
    border-bottom: 1px solid #EEE;
}
.invite-form {
    background: #EEE;
    border: 1px solid #CCC;
    border-radius: 10px;
    padding: 20px;
    h4 {
        margin-top: 0;
    }
}

.lab-uploads, .site-setup {
    .icon {
        font-size: 24px;
        cursor: pointer;
    }
    .alert {
        margin-bottom: 30px;
    }
}

.message {
    &.success {
        color: #3c763d;
        margin-top: 15px;
    }
}


.update-profile-image {
    text-align: center;
    margin: 20px;

    .profile-image-holder {
        position: relative;
        cursor: pointer;
        width: 125px;
        height: 125px;
        overflow: hidden;
        border-radius: 50%;
        display: inline-block;

        .edit-panel {
            height: 30px;
            background: #EEE;
            position: absolute;
            bottom: 0;
            width: 125px;
        }
    }

    img.profile-image {
        max-width: 100%;


    }

}
.text-align-right {
    text-align: right;
}
.text-align-center {
    text-align: center;
}
.text-align-left {
    text-align: left;
}
.site-setup-wells {
    width: 100%;
    .bulk-upload {
        .btn {
            margin:10px 0 30px 0;
        }
        .content p {
            color: rgba(40, 43, 47, 0.5);
        }
    }
    i {
        color: #575C61;
    }
}

.flash.alert {
    .title {
        display: inline-block;
        font-weight: bold;
    }
    transition: background .1s linear;
    border-radius: 0;
    height: 100px;
    font-size: 22px;
    margin-bottom: 0;
    line-height: 100px;
    padding: 0 1rem;
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 100;
    box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
}

.react-datepicker__input-container {
    width: 100%;
}
.well-images {
    .img {
        display: inline-block;
        margin-bottom: 20px;
        a {
            display: block;
        }
    }
    .img-container {
        position: relative;
        display: inline-block;
    }
    .fa-times-circle-o {
        position: absolute;
        font-size: 48px;
        top: -10px;
        right: -10px;
    }
    .img-actions {
        margin-top: 20px;
    }
}
.sample-schedule {
    .fa-times {
        padding-left: 5px;
    }
    .well-title {
        white-space: nowrap;
    }
    .Select-placeholder, .Select--single > .Select-control .Select-value {
        line-height: 42px;
    }
    .select-tests {
        height: 44px;
        .Select-control {
            height: 44px;
        }
        .Select-placeholder, .Select--single > .Select-control .Select-value {
            line-height: 42px;
        }
    }
    .select-all {
        cursor: pointer;
        color: #1FC7C8;
        font-size: 9px;
        font-weight: 700;
        text-transform: uppercase;
        display: block;
        &:hover {
            color: #158586;
            // text-decoration: underline;
        }
    }
}
.inner-sidebar {
    height: 100%;
    width: 300px;
    background: #FFFFFF;
    overflow-y: auto;
}
/* ... */

